# django-fineforms

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
fineforms/: wrappers.py
fineforms/locale/de/LC_MESSAGES/: django.po
fineforms/locale/rm/LC_MESSAGES/: django.mo  django.po
fineforms/templates/fineforms/: errors.html  field-plain.html  field.html  fields.html  submit.html
fineforms/templatetags/: fineforms.py
tests/: cov.sh
tests/testapp/: settings.py  test_tags.py  wrappers.py
tests/testapp/templates/: additional.html
