[metadata]
name = django_fineforms
version = attr: fineforms.__version__
description = Form rendering for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-fineforms/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude = tests

[flake8]
exclude = venv,build,docs,.tox
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *fineforms*
omit =
    *migrations*
    *tests*
    *.tox*
