[metadata]
name = django_fineforms
version = attr: fineforms.__version__
description = Form rendering for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-fineforms/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = tests

[options.extras_require]
tests =
    coverage

[coverage:run]
branch = True
include =
    *fineforms*
omit =
    *migrations*
    *tests*
    *.tox*
